# sdkwork-course

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.base.json  tsconfig.json
.mimocode/plans/: 1781316428451-stellar-tiger.md  course-app-frontend.md
apis/: README.md
apis/app-api/course/: operations.json
apis/backend-api/course/: operations.json
apps/: README.md
apps/course-h5/: package.json  vite.config.ts
apps/course-h5/src/: App.tsx
apps/course-pc/: package.json  tsconfig.json  vite.config.ts
apps/course-pc/.sdkwork/: README.md
apps/course-pc/src/: App.tsx
apps/sdkwork-course-h5/: index.html  package.json  tsconfig.json  vite.config.ts
apps/sdkwork-course-h5/.sdkwork/: README.md
apps/sdkwork-course-h5/src/: App.tsx  index.css
apps/sdkwork-course-mini-program/: package.json
apps/sdkwork-course-mini-program/.sdkwork/: README.md
apps/sdkwork-course-mini-program/src/: app.js  app.json  app.wxss  project.config.json
apps/sdkwork-course-pc/: index.html  package.json  vite.config.ts
apps/sdkwork-course-pc/src/: App.tsx  index.css
configs/: README.md
crates/sdkwork-content-course-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-content-course-repository-sqlx/migrations/: 0001_course_foundation.sql
crates/sdkwork-content-course-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-content-course-repository-sqlx/src/: bootstrap.rs  lib.rs
crates/sdkwork-content-course-repository-sqlx/src/db/: schema.rs
crates/sdkwork-content-course-repository-sqlx/src/repository/: adapters.rs  course_repository.rs  mod.rs  postgres_adapters.rs  postgres_course_repository_port.rs  sql_dialect.rs
crates/sdkwork-content-course-repository-sqlx/tests/: course_storage.rs
crates/sdkwork-content-course-service/: Cargo.toml  README.md
crates/sdkwork-content-course-service/specs/: README.md  component.spec.json
crates/sdkwork-content-course-service/src/: lib.rs
crates/sdkwork-content-course-service/src/domain/: commands.rs  models.rs
crates/sdkwork-content-course-service/src/ports/: provider.rs  repository.rs
crates/sdkwork-content-course-service/src/service/: course_service.rs  mod.rs
crates/sdkwork-content-course-service/src/test_support/: fakes.rs
crates/sdkwork-course-database-host/: Cargo.toml
crates/sdkwork-course-database-host/src/: lib.rs
crates/sdkwork-course-embedded-bootstrap/: Cargo.toml
crates/sdkwork-course-embedded-bootstrap/src/: bootstrap.rs  lib.rs  port_factory.rs  provider_ports.rs
crates/sdkwork-course-embedded-bootstrap/src/adapters/: http_audit.rs  http_notification.rs  logging.rs  mod.rs
crates/sdkwork-course-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-course-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-router-course-app-api/: Cargo.toml  README.md
crates/sdkwork-router-course-app-api/specs/: README.md  component.spec.json
crates/sdkwork-router-course-app-api/src/: lib.rs  manifest.rs
crates/sdkwork-router-course-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-course-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-router-course-backend-api/src/: lib.rs  manifest.rs  paths.rs
crates/sdkwork-routes-course-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-course-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-course-app-api/src/: error.rs  handlers.rs  http_handlers.rs  lib.rs  manifest.rs  paths.rs  routes.rs  service_state.rs
crates/sdkwork-routes-course-app-api/src/mapper/: response.rs
crates/sdkwork-routes-course-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-course-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-course-backend-api/src/: handlers.rs  http_handlers.rs  lib.rs  manifest.rs  service_state.rs
crates/sdkwork-routes-course-backend-api/src/mapper/: response.rs
crates/sdkwork-routes-course-http-auth/: Cargo.toml
crates/sdkwork-routes-course-http-auth/src/: context.rs  lib.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql  002_default_category.sql
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH-2026-06-13-course-todo-completion.md  TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
docs/superpowers/plans/: 2026-06-13-course-todo-completion.md
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: course-design-contract.test.mjs  course-route-integration-contract.test.mjs  course-workspace-boundary.test.mjs  materialize-course-openapi.mjs
scripts/dev/: generate-course-backend-http-layer.mjs  generate-course-postgres-adapters.mjs  generate-course-postgres-repository-port.mjs
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-router-course-app-api.route-manifest.json  sdkwork-routes-course-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-course-backend-api.route-manifest.json  sdkwork-routes-course-backend-api.route-manifest.json
sdks/_shared/course-contracts/: README.md  tsconfig.json
sdks/sdkwork-course-app-sdk/: .sdkwork-assembly.json  README.md
sdks/sdkwork-course-app-sdk/openapi/: sdkwork-course-app-api.openapi.yaml  sdkwork-course-app-api.sdkgen.yaml
sdks/sdkwork-course-app-sdk/specs/: README.md  component.spec.json
sdks/sdkwork-course-backend-sdk/: .sdkwork-assembly.json  README.md
sdks/sdkwork-course-backend-sdk/openapi/: sdkwork-course-backend-api.openapi.yaml  sdkwork-course-backend-api.sdkgen.yaml
sdks/sdkwork-course-backend-sdk/specs/: README.md  component.spec.json
specs/: README.md  component.spec.json  course-capabilities.yaml
specs/database/: README.md  course-schema.contract.json
specs/design/: course-module-plan.md
specs/openapi/: course-operation-schemas.contract.json
tools/: README.md  materialize_course_database_contract.mjs
(+63 files in other folders)
