[package]
name = "sdkwork-content-course-repository-sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork content course SQLx repository implementation and migrations."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-course-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
async-trait = "0.1"
sdkwork-content-course-service = { path = "../sdkwork-content-course-service" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
