[package]
name = "sdkwork-course-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-course application HTTP plane."

[lib]
name = "sdkwork_course_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-course-embedded-bootstrap = { path = "../sdkwork-course-embedded-bootstrap" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
