[package]
name = "sdkwork-routes-course-backend-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork course backend-api route crate skeleton."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
sdkwork-content-course-service = { path = "../sdkwork-content-course-service" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

