[package]
name = "sdkwork-routes-course-http-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP auth context bridge for SDKWork course route crates."

[lib]
name = "sdkwork_routes_course_http_auth"

[dependencies]
axum.workspace = true
sdkwork-content-course-service = { path = "../sdkwork-content-course-service" }
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-core.workspace = true
